@@ -962,6 +962,14 @@
 							<visible>!Skin.HasSetting(HomeMenuNoGrantorrentButton)</visible>
 						</item-->
 						<item>
+							<label>$LOCALIZE[40001]</label>
+							<onclick>PlayMedia("plugin://plugin.program.simply.launcher/?do=program&amp;id=Netflix",return)</onclick>
+							<property name="menu_id">$NUMBER[45030]</property>
+							<thumb>icons/sidemenu/netflix.png</thumb>
+							<property name="id">netflix</property>
+							<visible>!Skin.HasSetting(HomeMenuNoNetflixButton)</visible>
+						</item>
+						<item>
 							<label>$LOCALIZE[40010]</label>
 							<onclick>ActivateWindow(10025,&quot;plugin://plugin.video.winner/&quot;,return)</onclick>
 							<property name="menu_id">$NUMBER[45000]</property>
